--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,14 @@
 /******************************************************************************
+ * Special mobile layout width
+ * Utilized in src/components/jambonz-ui: useMobileMedia
+*******************************************************************************/
+:root {
+  --mobile-media: 896px;
+}
+
+$mobile-width: 896px;
+
+/******************************************************************************
  * Colors
 *******************************************************************************/
 $black: #000;
